infrastructure/ingress-nginx/01-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/acme-http01-self-check: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "infra-argocd.jpstudy.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - infra-argocd.jpstudy.org
    secretName: argocd-tls-cert
