infrastructure/ingress-nginx/03-dev-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-dev-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "api.jpstudy.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-dev-service
            port:
              number: 80
  tls:
  - hosts:
    - api.jpstudy.org
    secretName: backend-dev-tls-cert
